force-app/main/default/objects/Medical_Note__c/Medical_Note__c.object-meta.xml
<CustomObject>
    <label>Medical Note</label>
    <nameField>
        <displayFormat>MN-{0000}</displayFormat>
        <label>Medical Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>