force-app/main/default/objects/Medical_Note__c/fields/Medical_History__c.field-meta.xml
<CustomField>
    <fullName>Medical_History__c</fullName>
    <label>Medical History</label>
    <referenceTo>Medical_History__c</referenceTo>
    <relationshipLabel>Medical Notes</relationshipLabel>
    <relationshipName>Medical_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>