force-app/main/default/objects/Medical_Note__c/fields/Medicine__c.field-meta.xml
<CustomField>
    <fullName>Medicine__c</fullName>
    <label>Medicine</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>