force-app/main/default/objects/Medical_Note__c/listViews/My_Medical_Notes.listView-meta.xml
<ListView>
    <fullName>My_Medical_Notes</fullName>
    <columns>NAME</columns>
    <columns>Disease__c</columns>
    <columns>Medical_History__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>My Medical Notes</label>
</ListView>